johnlimadev/force-app/main/default/objects/Nota__c/Nota__c.object-meta.xml
<CustomObject>
    <label>Nota</label>
    <nameField>
        <displayFormat>N{000}</displayFormat>
        <label>Nota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>