johnlimadev/force-app/main/default/objects/Nota__c/fields/Aclive_e_Declive_Carro__c.field-meta.xml
<CustomField>
    <fullName>Aclive_e_Declive_Carro__c</fullName>
    <label>Aclive e Declive (Carro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>