johnlimadev/force-app/main/default/objects/Nota__c/fields/Aprov__c.field-meta.xml
<CustomField>
    <fullName>Aprov__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Aprov</label>
    <type>Checkbox</type>
</CustomField>