johnlimadev/force-app/main/default/objects/Nota__c/fields/Curvas_Moto__c.field-meta.xml
<CustomField>
    <fullName>Curvas_Moto__c</fullName>
    <label>Curvas (Moto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>