johnlimadev/force-app/main/default/objects/Nota__c/fields/Media_de_Notas_Carro__c.field-meta.xml
<CustomField>
    <fullName>Media_de_Notas_Carro__c</fullName>
    <formula>( Baliza_Carro__c  + Aclive_e_Declive_Carro__c + Estacionamento_Carro__c  +  Semaforo_Carro__c  + Curvas_Carro__c   +  Rotatoria_Carro__c ) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média de Notas (Carro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>