johnlimadev/force-app/main/default/objects/Nota__c/fields/Prova__c.field-meta.xml
<CustomField>
    <fullName>Prova__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prova</label>
    <referenceTo>Prova__c</referenceTo>
    <relationshipLabel>Notas</relationshipLabel>
    <relationshipName>Notas</relationshipName>
    <type>Lookup</type>
</CustomField>