johnlimadev/force-app/main/default/objects/Nota__c/fields/Prova_do_8_Moto__c.field-meta.xml
<CustomField>
    <fullName>Prova_do_8_Moto__c</fullName>
    <label>Prova do 8 (Moto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>