johnlimadev/force-app/main/default/objects/Nota__c/fields/Sem_foro_Moto__c.field-meta.xml
<CustomField>
    <fullName>Sem_foro_Moto__c</fullName>
    <label>Semáforo (Moto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>