johnlimadev/force-app/main/default/objects/Nota__c/fields/Semaforo_Carro__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_Carro__c</fullName>
    <label>Semáforo (Carro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>