johnlimadev/force-app/main/default/objects/Nota__c/recordTypes/Carro.recordType-meta.xml
<RecordType>
    <fullName>Carro</fullName>
    <active>true</active>
    <label>Carro</label>
</RecordType>