johnlimadev/force-app/main/default/objects/Nota__c/recordTypes/Moto.recordType-meta.xml
<RecordType>
    <fullName>Moto</fullName>
    <active>true</active>
    <label>Moto</label>
</RecordType>